Main logic and Temperature Sensor Wrapper

--- a/Test/platformio.ini
+++ b/Test/platformio.ini
@@ -12,9 +12,12 @@
 platform = ststm32
 board = nucleo_g474re
 framework = arduino
-lib_deps = 
+upload_protocol = stlink
+lib_deps = ppedro74/SerialCommands@^2.2.0
 build_flags = 
-    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
-    -std=gnu++2a
-build_unflags =
-    -std=gnu++14
+	-std=gnu++2a
+	-frtti
+monitor_speed = 115600
+build_unflags = 
+	-fno-rtti
+	-std=gnu++14
