add control functions, enhance readout, change sampling time to 50ms, increase Serial baud rate

--- a/Test/platformio.ini
+++ b/Test/platformio.ini
@@ -17,7 +17,7 @@ lib_deps = ppedro74/SerialCommands@^2.2.0
 build_flags = 
 	-std=gnu++2a
 	-frtti
-monitor_speed = 115600
+monitor_speed = 1000000
 build_unflags = 
 	-fno-rtti
 	-std=gnu++14
