extra build CXX only build flag to remove -frtti related warnings for C code

--- a/Test/platformio.ini
+++ b/Test/platformio.ini
@@ -16,8 +16,8 @@ upload_protocol = stlink
 lib_deps = ppedro74/SerialCommands@^2.2.0
 build_flags = 
 	-std=gnu++2a
-	-frtti
 monitor_speed = 1000000
 build_unflags = 
 	-fno-rtti
 	-std=gnu++14
+extra_scripts = extra_script.py
